--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 body{
     margin: 0 2em;
+    font-family: 'Poppins', sans-serif;
 }
 .head-flex{
     display: flex;
+   
     justify-content: space-between;
    
 }
@@ -26,7 +28,27 @@ li{
     order: 1;
     border-radius: 6px;
     margin-top: 1em;
+    object-fit: cover;
 }
-.image-div{
-   
+.section-flex{
+    display: flex;
+    margin-top: 4em;
+
+}
+.skill-flex{
+    display: flex;
+    margin: 1em;
+    padding: 0;
+}
+.skill-2-flex{
+    display: flex;
+    margin: 1em;
+    padding: 0;
+}
+.skill{
+    border: 1px solid black;
+    padding: 2px 10px;
+    text-align: center;
+    list-style: none;
+    margin: 0 .5em;
 }
